--- a/foot/src/main/resources/templates/user/include/account.html
+++ b/foot/src/main/resources/templates/user/include/account.html
@@ -42,33 +42,33 @@
 										<i class="feather-icon icon-settings me-2"></i>
 										계정 탈퇴
 									</a>
-								</li>
-								
-								<!-- nav item -->
-								<li class="nav-item">
+								</li> 
+								<br>	<br>	<br>	<br>	<br>	<br>	<br>	<br>	<br>	
+							
+								<!-- <li class="nav-item">
 									<a class="nav-link" href="account-address.html">
 										<i class="feather-icon icon-map-pin me-2"></i>
 										Address
 									</a>
 								</li>
-								<!-- nav item -->
+						
 								<li class="nav-item">
 									<a class="nav-link" href="account-payment-method.html">
 										<i class="feather-icon icon-credit-card me-2"></i>
 										Payment Method
 									</a>
 								</li>
-								<!-- nav item -->
+							
 								<li class="nav-item">
 									<a class="nav-link" href="account-notification.html">
 										<i class="feather-icon icon-bell me-2"></i>
 										Notification
 									</a>
 								</li>
-								<!-- nav item -->
+						
 								<li class="nav-item">
 									<hr />
-								</li>
+								</li> -->
 								<!-- nav item -->
 								<!-- <li class="nav-item">
 									<a class="nav-link" href="javascript:void(0);" id="btnSignout">
