--- a/foot/src/main/resources/templates/xdm/codegroup/codeGroupXdmForm.html
+++ b/foot/src/main/resources/templates/xdm/codegroup/codeGroupXdmForm.html
@@ -56,18 +56,18 @@
                                             <div class="form-group">
                                                 <div class="form-line">
                                                     <h2 class="card-inside-title"><small>코드그룹 이름<span style="color: red;">*</span></small></h2>
-                                                    <input type="text" class="form-control" name="ifcgName" id="ifcgName" th:value="${item?.ifcgName}"   placeholder="한글,영대소문자,숫자" />
+                                                    <input type="text" class="form-control" name="ifcgName" id="ifcgName" th:value="${item?.ifcgName}" placeholder="한글,영대소문자,숫자" >
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-sm-3">
+                                        <!-- <div class="col-sm-3">
                                             <div class="form-group">
                                                 <div class="form-line">
                                                     <h2 class="card-inside-title"><small>코드그룹 이름 (영문)</small></h2>
-                                                    <input type="text" class="form-control" placeholder="영대소문자,숫자" name="ifcgName" id="ifcgName"/>
+                                                    <input type="text" class="form-control" placeholder="영대소문자,숫자" name="ifcgName" id="ifcgName" >
                                                 </div>
                                             </div>
-                                        </div> 
+                                        </div>  -->
                                     </div>
                                     <div class="row clearfix">
                                         <!-- <div class="col-sm-3">
