--- a/foot/src/main/resources/templates/xdm/usermember/MemberXdmList.html
+++ b/foot/src/main/resources/templates/xdm/usermember/MemberXdmList.html
@@ -43,28 +43,32 @@
                                             </select>
                                             
                                         </div> -->
-                                        <!-- <div class="col-sm-2">
-                                            <select class="form-control show-tick ">
-                                                <option value="">날짜</option>
-                                                <option value="1">등록일</option>
-                                                <option value="2">수정일</option>    
+                                        <div class="col-sm-2">
+                                            <select class="form-control show-tick " id="shOptionDate" name="shOptionDate">
+                                                <option value="" th:selected="${vo.shOptionDate == null}">날짜</option>
+                                                <option value="1" th:selected="${vo.shOptionDate == 1}">등록일</option>
+                                                <option value="2" th:selected="${vo.shOptionDate == 2}">수정일</option>    
                                             </select>
                                             
                                         </div>
-                                        <div class="col-sm-2">
-                                            <div class="form-group">
-                                                <div class="form-line">
-                                                    <input type="text" class="form-control" placeholder="2025-01-05" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-2">
-                                            <div class="form-group">
-                                                <div class="form-line">
-                                                    <input type="text" class="form-control" placeholder="2025-02-04" />
-                                                </div>
-                                            </div>
-                                        </div> -->
+                                         <div class="col-sm-2">
+										    <div class="form-group">
+										        <div class="form-line">
+										            <input type="text" class="form-control" 
+										                   th:value="${vo.shDateStart != null && #strings.length(vo.shDateStart) >= 10 ? #strings.substring(vo.shDateStart, 0, 10) : vo.shDateStart}"
+										                   id="shDateStart" name="shDateStart" placeholder="시작일" autocomplete="off"/>
+										        </div>
+										    </div>
+										</div>
+										<div class="col-sm-2">
+										    <div class="form-group">
+										        <div class="form-line">
+										            <input type="text" class="form-control" 
+										                   th:value="${vo.shDateEnd != null && #strings.length(vo.shDateEnd) >= 10 ? #strings.substring(vo.shDateEnd, 0, 10) : vo.shDateEnd}"
+										                   id="shDateEnd" name="shDateEnd" placeholder="종료일" autocomplete="off"/>
+										        </div>
+										    </div>
+										</div>
                                         
 
                                     </div>
@@ -95,7 +99,7 @@
                                                     <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
                                                   </svg>
                                             </button>
-                                            <button type="button" class="btn btn-default waves-effect">
+                                            <button type="button" class="btn btn-default waves-effect" id="btnReset">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-clockwise" viewBox="0 0 16 16">
                                                     <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2z"/>
                                                     <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466"/>
@@ -145,7 +149,9 @@
                                             <th>생일</th>
                                             <th>ID</th>
                                             <th>이메일</th>
-                                            <th>비밀번호</th>
+                                            <th>등록일</th>
+                                            <th>수정일</th>
+                                            
                                            
                                         </tr>
                                     </thead>
@@ -158,8 +164,8 @@
                                     	</tr>
                                         <tr  th:if="${!#lists.isEmpty(list)}" th:each="list : ${list}">
                                             <th>
-                                                <input class="form-check-input row-checkbox" id="1" type="checkbox">
-                                                <label class="form-check-label" for="1"></label>
+                                                <input class="form-check-input row-checkbox" id="checked" type="checkbox">
+                                                <label class="form-check-label" for="checkbox"></label>
                                             </th>
                                             <td th:text="${list.suSeq}"></td>
                                             <td><a th:href="@{/MemberXdmView(suSeq=${list.suSeq})}" th:text="${list.userName}"></a></td>
@@ -169,7 +175,9 @@
                                             <td th:text="${list.userBirthday}"></td>
                                             <td th:text="${list.userId}"></td>
                                             <td th:text="${list.userEmail}"></td>
-                                            <td th:text="${list.userPassword}"></td>
+                                            <td th:text="${list.regDateTime}"></td>
+                                            <td th:text="${list.modDateTime}"></td>
+                                           
                                             
                                         </tr>
                                         
@@ -209,7 +217,7 @@
                                         <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
                                       </svg>
                                     </a>
-                                <a class="btn btn-primary" href="./code_basic_information.html" role="button" style="float: right; margin-right:  5px;">
+                                <a class="btn btn-primary" href="/SignupUserForm" role="button" style="float: right; margin-right:  5px;">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
                                         <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"/>
                                       </svg>
@@ -272,6 +280,11 @@
     
         <!-- Demo Js -->
         <script src="/xdm/template/master/js/demo.js"></script>
+        
+        <!-- 달력 플러그인 추가 -->
+	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js"></script>
+        
     <!--체크박스 전체 체크 단독 체크-->
     <script>
         document.addEventListener("DOMContentLoaded", function () {
@@ -311,36 +324,44 @@
         
      </script>
      <script type="text/javascript">
-         document.getElementById("btnSearch").onclick = function () {
-        	
-        	 
-        	 let shValue = document.getElementById("shValue");// 검색어 
-    		 let shValueError = document.getElementById("shValueError");// 검색어  입력 안했을 경우
-    		 
-    		 let isValid = true;
-    		 
-    		 
-    		 
-    		 if (shValue.value.trim() == "") {
-    			 shValueError.innerText = "검색어를 입력해주세요";
-                 ifcdName.focus();
-                 isValid = false;
-             } else {
-            	 shValueError.innerText = "";
-             }
-    		 
-    		 
-    		// 데이터 값이 있을 경우 폼 제출
-             if (isValid) {
-            	 form.action = "/MemberXdmList";
-     	        form.submit(); 
-             }
-        	};
-        	
+     document.getElementById("btnSearch").onclick = function () {
+      
+         form.action = "/MemberXdmList";
+     	 form.submit(); 
+             
+     };
+     document.getElementById("btnReset").onclick = function () {
+		  window.location.href = "/MemberXdmList";
+		};
         	
         	
          
      </script>
+         <script type="text/javascript">
+    //달력 
+    $.datetimepicker.setLocale('ko'); //번역기
+    jQuery(function(){
+    	 jQuery('#shDateStart').datetimepicker({
+    	  format:'Y/m/d',
+    	  onShow:function( ct ){
+    	   this.setOptions({
+    	    maxDate:jQuery('#shDateEnd').val()?jQuery('#shDateEnd').val():false
+    	   })
+    	  },
+    	  timepicker:false
+    	 });
+    	 jQuery('#shDateEnd').datetimepicker({
+    	  format:'Y/m/d',
+    	  onShow:function( ct ){
+    	   this.setOptions({
+    	    minDate:jQuery('#shDateStart').val()?jQuery('#shDateStart').val():false
+    	   })
+    	  },
+    	  timepicker:false
+    	 });
+    	});
+    
+    </script>
 
 </body>
 </html>
