--- a/foot/src/main/resources/templates/xdm/announcement/AnnouncementXdmForm.html
+++ b/foot/src/main/resources/templates/xdm/announcement/AnnouncementXdmForm.html
@@ -36,14 +36,14 @@
                                         </div>
                                     </div>
                                 </div>
-                                 <div class="col-sm-6">
+                                <!--  <div class="col-sm-6">
                                     <div class="form-group">
                                         <div class="form-line">
                                             <input type="text" class="form-control" placeholder="작성 날짜 입력 예)2025-03-03" name="creationDate" id ="creationDate"/>
                                         	<span id="creationDateError" style="color: red; font-size: 10px;"></span>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 
                                 
                             </div>
@@ -153,8 +153,7 @@
 		let detail = document.getElementById("detail"); //풋살장 공지사항 제목 
 		let detailError = document.getElementById("detailError");//풋살장 공지사항 제목  잘못 입력 했을 경우
 		
-		let creationDate = document.getElementById("creationDate"); //풋살장 공지사항 등록일
-		let creationDateError = document.getElementById("creationDateError");//풋살장 공지사항 등록일 잘못 입력 했을 경우
+		
 		
 		let title = document.getElementById("title"); //풋살장 공지사항 내용
 		let titleError = document.getElementById("titleError");//풋살장 공지사항 내용 잘못 입력 했을 경우
@@ -180,15 +179,6 @@
 			detailError.innerText = "";
 		}
 		
-		//공지사항 등록일 검증
-		
-		if (!creationDate.value.match(/^\d{4}-\d{2}-\d{2}$/)) {
-		    creationDateError.innerText = "YYYY-MM-DD 형식으로 입력해주세요.";
-		    creationDate.focus();
-		    isValid = false;
-		} else {
-		    creationDateError.innerText = "";
-		}
 		
 		//공지사항 내용 검증
 		if (title.value == ""){
