--- a/foot/src/main/resources/templates/xdm/code/codeXdmList.html
+++ b/foot/src/main/resources/templates/xdm/code/codeXdmList.html
@@ -50,20 +50,24 @@
                                             </select>
                                             
                                         </div>
-                                         <div class="col-sm-2">
-                                            <div class="form-group">
-                                                <div class="form-line">
-                                                    <input type="text" class="form-control" id="date_timepicker_start"  placeholder="시작일"  autocomplete="off"/>
-                                                </div>
-                                            </div>
-                                        </div>
                                         <div class="col-sm-2">
-                                            <div class="form-group">
-                                                <div class="form-line">
-                                                    <input type="text" class="form-control" id="date_timepicker_end"  placeholder="종료일"  autocomplete="off"/>
-                                                </div>
-                                            </div>
-                                        </div>  
+										    <div class="form-group">
+										        <div class="form-line">
+										            <input type="text" class="form-control" 
+										                   th:value="${vo.shDateStart != null && #strings.length(vo.shDateStart) >= 10 ? #strings.substring(vo.shDateStart, 0, 10) : vo.shDateStart}"
+										                   id="shDateStart" name="shDateStart" placeholder="시작일" autocomplete="off"/>
+										        </div>
+										    </div>
+										</div>
+										<div class="col-sm-2">
+										    <div class="form-group">
+										        <div class="form-line">
+										            <input type="text" class="form-control" 
+										                   th:value="${vo.shDateEnd != null && #strings.length(vo.shDateEnd) >= 10 ? #strings.substring(vo.shDateEnd, 0, 10) : vo.shDateEnd}"
+										                   id="shDateEnd" name="shDateEnd" placeholder="종료일" autocomplete="off"/>
+										        </div>
+										    </div>
+										</div>
                                         
 
                                     </div>
@@ -85,7 +89,7 @@
                                             <div class="form-group">
                                                 <div class="form-line">
                                                     <input type="text" class="form-control" id="shValue" name="shValue" th:value="${vo.shValue}" onkeyup="enterkey()" placeholder="검색어" />
-                                                	<span id="shValueError" style="color: red; font-size: 10px;"></span>
+                                                	
                                                 </div>
                                             </div>
                                         </div>
@@ -282,7 +286,6 @@
 		<script src="/xdm/jquery/datetimepicker-master/build"></script>
         
         <!-- 달력 플러그인 추가 -->
-		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.css"/>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js"></script>
    
    
@@ -323,82 +326,59 @@
          document.getElementById("btnReset").onclick = function () {
    		  window.location.href = "/code/codeXdmList";
    		};
-	 /* 검색하기 */
-	 document.getElementById("btnSearch").onclick = function () {
-		 
-		 let shValue = document.getElementById("shValue");// 검색어 
-		 let shValueError = document.getElementById("shValueError");// 검색어  입력 안했을 경우
-		 
-		 let isValid = true;
-		 
-		 
-		 
-		 if (shValue.value.trim() == "") {
-			 shValueError.innerText = "검색어를 입력해주세요";
-             ifcdName.focus();
-             isValid = false;
-         } else {
-        	 shValueError.innerText = "";
-         }
-		 
-		 
-		// 데이터 값이 있을 경우 폼 제출
-         if (isValid) {
-        	 form.action = "/code/codeXdmList";
- 	        form.submit(); 
-         }  
-	        
-	    };
-	    
-	    
-	  document.getElementById("changeRowNum").onchange = function () {
-	       document.getElementById("rowNumToShow").value = document.getElementById("changeRowNum").value;
-	       form.action = "/code/codeXdmList";
-           form.submit();
-     }
-	  
-	  let seq = document.querySelector("input[name=cdSeq]");	
-	  
-	  document.getElementById("btnForm").onclick = function () {
-		    goForm(0);
-		}
+   		/* 검색하기 */
+   		document.getElementById("btnSearch").onclick = function () {
+   		    let shValue = document.getElementById("shValue"); // 검색어 
 
+   		    // 데이터 값이 있을 경우 폼 제출
+   		    form.action = "/code/codeXdmList";
+   		    form.submit();
+   		};
 
-		goForm = function (keyValue) {
-		    seq.value = keyValue;
-		    form.action = "/code/CodeXdmForm";
-		    form.submit();
-		}
+   		document.getElementById("changeRowNum").onchange = function () {
+   		    document.getElementById("rowNumToShow").value = document.getElementById("changeRowNum").value;
+   		    form.action = "/code/codeXdmList";
+   		    form.submit();
+   		}
+
+   		let seq = document.querySelector("input[name=cdSeq]");  
+
+   		document.getElementById("btnForm").onclick = function () {
+   		    goForm(0);
+   		}
+
+   		goForm = function (keyValue) {
+   		    seq.value = keyValue;
+   		    form.action = "/code/CodeXdmForm";
+   		    form.submit();
+   		}
 	    
     
     </script> 
     
-    <script type="text/javascript">
-    
+     <script type="text/javascript">
+    //달력 
+    $.datetimepicker.setLocale('ko'); //번역기
     jQuery(function(){
-    	 jQuery('#date_timepicker_start').datetimepicker({
+    	 jQuery('#shDateStart').datetimepicker({
     	  format:'Y/m/d',
     	  onShow:function( ct ){
     	   this.setOptions({
-    	    maxDate:jQuery('#date_timepicker_end').val()?jQuery('#date_timepicker_end').val():false
+    	    maxDate:jQuery('#shDateEnd').val()?jQuery('#shDateEnd').val():false
     	   })
     	  },
     	  timepicker:false
     	 });
-    	 jQuery('#date_timepicker_end').datetimepicker({
+    	 jQuery('#shDateEnd').datetimepicker({
     	  format:'Y/m/d',
     	  onShow:function( ct ){
     	   this.setOptions({
-    	    minDate:jQuery('#date_timepicker_start').val()?jQuery('#date_timepicker_start').val():false
+    	    minDate:jQuery('#shDateStart').val()?jQuery('#shDateStart').val():false
     	   })
     	  },
     	  timepicker:false
     	 });
     	});
-    
-    
-    
-    
     
     </script>
 </body>
