--- a/foot/src/main/resources/templates/xdm/codegroup/codeGroupXdmList.html
+++ b/foot/src/main/resources/templates/xdm/codegroup/codeGroupXdmList.html
@@ -52,20 +52,24 @@
                                             
                                         </div>
                                          <div class="col-sm-2">
-                                            <div class="form-group">
-                                                <div class="form-line">
-                                                    <input type="text" class="form-control" id="date_timepicker_start"  placeholder="시작일"  autocomplete="off"/>
-                                                    
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-2">
-                                            <div class="form-group">
-                                                <div class="form-line">
-                                                    <input type="text" class="form-control" id="date_timepicker_end" placeholder="종료일"  autocomplete="off"/>
-                                                </div>
-                                            </div>
-                                        </div> 
+										    <div class="form-group">
+										        <div class="form-line">
+										            <input type="text" class="form-control" 
+										                   th:value="${vo.shDateStart != null && #strings.length(vo.shDateStart) >= 10 ? #strings.substring(vo.shDateStart, 0, 10) : vo.shDateStart}"
+										                   id="shDateStart" name="shDateStart" placeholder="시작일" autocomplete="off"/>
+										        </div>
+										    </div>
+										</div>
+										<div class="col-sm-2">
+										    <div class="form-group">
+										        <div class="form-line">
+										            <input type="text" class="form-control" 
+										                   th:value="${vo.shDateEnd != null && #strings.length(vo.shDateEnd) >= 10 ? #strings.substring(vo.shDateEnd, 0, 10) : vo.shDateEnd}"
+										                   id="shDateEnd" name="shDateEnd" placeholder="종료일" autocomplete="off"/>
+										        </div>
+										    </div>
+										</div>
+ 
                                         
 													
                                     </div>
@@ -82,7 +86,7 @@
                                             <div class="form-group">
                                                 <div class="form-line">
                                                     <input type="text" class="form-control" id="shValue" name="shValue" th:value="${vo.shValue}" onkeyup="enterkey()" placeholder="검색어" />
-                                                    <span id="shValueError" style="color: red; font-size: 10px;"></span>
+                                                    
                                                 </div>
                                             </div>
                                         </div>
@@ -171,8 +175,8 @@
                                             <td></td>
                                             <td th:text="${list.xifcdSeqCount}"></td>
                                             <td></td>
-                                            <td th:text="${list.registration}"></td>
-                                            <td th:text="${list.correction}"></td>
+                                            <td th:text="${list.regDateTime}"></td>
+                                            <td th:text="${list.modDateTime}"></td>
                                         </tr>
                                       
                                     </tbody>
@@ -277,7 +281,7 @@
     <script src="/xdm/template/master/js/demo.js"></script>
 	
 	<!-- 달력 플러그인 추가 -->
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.css"/>
+	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js"></script>
 
 
@@ -320,31 +324,13 @@
      <script type="text/javascript">
 	 /* 검색하기 */
 	 document.getElementById("btnSearch").onclick = function () {
-		 
-		 let shValue = document.getElementById("shValue");// 검색어 
-		 let shValueError = document.getElementById("shValueError");// 검색어  입력 안했을 경우
-		 
-		 let isValid = true;
-		 
-		 
-		 
-		 if (shValue.value.trim() == "") {
-			 shValueError.innerText = "검색어를 입력해주세요";
-             ifcdName.focus();
-             isValid = false;
-         } else {
-        	 shValueError.innerText = "";
-         }
-		 
-		 
-		// 데이터 값이 있을 경우 폼 제출
-         if (isValid) {
-        	 form.action = "/codeGroup/codeGroupXdmList";
- 	        form.submit(); 
-         }
+		
+		form.action = "/codeGroup/codeGroupXdmList";
+ 	    form.submit(); 
          
-	        
 	  };
+	  
+	  
 	  document.getElementById("btnReset").onclick = function () {
 		  window.location.href = "/codeGroup/codeGroupXdmList";
 		};
@@ -375,22 +361,23 @@
     </script> 
     
     <script type="text/javascript">
-    
+    //달력 
+    $.datetimepicker.setLocale('ko'); //번역기
     jQuery(function(){
-    	 jQuery('#date_timepicker_start').datetimepicker({
+    	 jQuery('#shDateStart').datetimepicker({
     	  format:'Y/m/d',
     	  onShow:function( ct ){
     	   this.setOptions({
-    	    maxDate:jQuery('#date_timepicker_end').val()?jQuery('#date_timepicker_end').val():false
+    	    maxDate:jQuery('#shDateEnd').val()?jQuery('#shDateEnd').val():false
     	   })
     	  },
     	  timepicker:false
     	 });
-    	 jQuery('#date_timepicker_end').datetimepicker({
+    	 jQuery('#shDateEnd').datetimepicker({
     	  format:'Y/m/d',
     	  onShow:function( ct ){
     	   this.setOptions({
-    	    minDate:jQuery('#date_timepicker_start').val()?jQuery('#date_timepicker_start').val():false
+    	    minDate:jQuery('#shDateStart').val()?jQuery('#shDateStart').val():false
     	   })
     	  },
     	  timepicker:false
