--- a/foot/src/main/resources/templates/xdm/futsal/FutsalXdmList.html
+++ b/foot/src/main/resources/templates/xdm/futsal/FutsalXdmList.html
@@ -40,29 +40,33 @@
                                                
                                             </select>
                                             
-                                        </div>
+                                        </div> -->
                                         <div class="col-sm-2">
-                                            <select class="form-control show-tick ">
-                                                <option value="">날짜</option>
-                                                <option value="2">등록일</option>
-                                                <option value="3">수정일</option>    
+                                            <select class="form-control show-tick " id="shOptionDate" name="shOptionDate">
+                                                <option value="" th:selected="${vo.shOptionDate == null}">날짜</option>
+                                                <option value="1" th:selected="${vo.shOptionDate == 1}">등록일</option>
+                                                <option value="2" th:selected="${vo.shOptionDate == 2}">수정일</option>    
                                             </select>
                                             
                                         </div>
-                                        <div class="col-sm-2">
-                                            <div class="form-group">
-                                                <div class="form-line">
-                                                    <input type="text" class="form-control" placeholder="2025-01-05" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-2">
-                                            <div class="form-group">
-                                                <div class="form-line">
-                                                    <input type="text" class="form-control" placeholder="2025-02-04" />
-                                                </div>
-                                            </div>
-                                        </div> -->
+                                         <div class="col-sm-2">
+										    <div class="form-group">
+										        <div class="form-line">
+										            <input type="text" class="form-control" 
+										                   th:value="${vo.shDateStart != null && #strings.length(vo.shDateStart) >= 10 ? #strings.substring(vo.shDateStart, 0, 10) : vo.shDateStart}"
+										                   id="shDateStart" name="shDateStart" placeholder="시작일" autocomplete="off"/>
+										        </div>
+										    </div>
+										</div>
+										<div class="col-sm-2">
+										    <div class="form-group">
+										        <div class="form-line">
+										            <input type="text" class="form-control" 
+										                   th:value="${vo.shDateEnd != null && #strings.length(vo.shDateEnd) >= 10 ? #strings.substring(vo.shDateEnd, 0, 10) : vo.shDateEnd}"
+										                   id="shDateEnd" name="shDateEnd" placeholder="종료일" autocomplete="off"/>
+										        </div>
+										    </div>
+										</div>
                                         
 
                                     </div>
@@ -73,8 +77,10 @@
                                             <select class="form-control show-tick " id="shOption" name="shOption">
                                                 <option value="" th:selected="${vo.shOption == null}">검색구분</option>
                                                 <option value="1" th:selected="${vo.shOption == 1}">풋살장 이름</option>
+                                                  <option value="4" th:selected="${vo.shOption == 4}">풋살장 지역</option>
                                                 <option value="2" th:selected="${vo.shOption == 2}">풋살장 주소</option>
-                                                <option value="3" th:selected="${vo.shOption == 3}">가격</option>
+                                                <option value="3" th:selected="${vo.shOption == 3}">풋살장 가격</option>
+                                              
                                                 
                                             </select>
                                         </div>
@@ -92,7 +98,7 @@
                                                     <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
                                                   </svg>
                                             </button>
-                                            <button type="button" class="btn btn-default waves-effect">
+                                            <button type="button" class="btn btn-default waves-effect" id="btnReset">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-clockwise" viewBox="0 0 16 16">
                                                     <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2z"/>
                                                     <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466"/>
@@ -138,8 +144,11 @@
                                             <th>#</th>
                                             
                                             <th>풋살장 이름</th>
+                                             <th>풋살장 지역</th>
                                             <th>풋살장 주소</th>
                                             <th>풋살장 가격</th>
+                                             <th>등록일</th>
+                                              <th>수정일</th>
                                             
                                         </tr>
                                     </thead>
@@ -167,9 +176,13 @@
                                                     </ol>
                                                 </nav>
                                             </td>
+                                           <!--   <td th:text="${list.futsalRegion}"></td> -->
+                                             <td th:text="${@codeService.selectOneCachedCode(list.futsalRegion)}"></td>
                                             <td th:text="${list.futsalAddress}"></td>
                                             
-                                            <td th:text="${list.futsalPrice}"></td>
+                                            <td th:text="${#numbers.formatInteger(list.futsalPrice, 3, 'COMMA')}"></td>
+                                            <td th:text="${list.regDateTime}"></td>
+                                            <td th:text="${list.modDateTime}"></td>
                                             
                                         </tr>
                                         
@@ -264,6 +277,9 @@
 
     <!-- Demo Js -->
     <script src="/xdm/template/master/js/demo.js"></script>
+    <!-- 달력 플러그인 추가 -->
+	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js"></script>
 
     <!--체크박스 전체 체크 단독 체크-->
     <script>
@@ -305,34 +321,44 @@
 	 
 	 
 	 /* 검색하기 */
-	 document.getElementById("btnSearch").onclick = function () {
-		 
-		 let shValue = document.getElementById("shValue");// 검색어 
-		 let shValueError = document.getElementById("shValueError");// 검색어  입력 안했을 경우
-		 
-		 let isValid = true;
-		 
-		 
-		 
-		 if (shValue.value.trim() == "") {
-			 shValueError.innerText = "검색어를 입력해주세요";
-             ifcdName.focus();
-             isValid = false;
-         } else {
-        	 shValueError.innerText = "";
-         }
-		 
-		 
-		// 데이터 값이 있을 경우 폼 제출
-         if (isValid) {
-        	 form.action = "/codeGroup/codeGroupXdmList";
- 	        form.submit(); 
-         }
+	  document.getElementById("btnSearch").onclick = function () {
+		
+		form.action =  "/FutsalXdmList";
+ 	    form.submit(); 
          
-	        
 	  };
+	  
+	  /* 리셋 */
+	  document.getElementById("btnReset").onclick = function () {
+		  window.location.href =  "/FutsalXdmList";
+		};
 	 
 	 
+    
+    </script>
+        <script type="text/javascript">
+    //달력 
+    $.datetimepicker.setLocale('ko'); //번역기
+    jQuery(function(){
+    	 jQuery('#shDateStart').datetimepicker({
+    	  format:'Y/m/d',
+    	  onShow:function( ct ){
+    	   this.setOptions({
+    	    maxDate:jQuery('#shDateEnd').val()?jQuery('#shDateEnd').val():false
+    	   })
+    	  },
+    	  timepicker:false
+    	 });
+    	 jQuery('#shDateEnd').datetimepicker({
+    	  format:'Y/m/d',
+    	  onShow:function( ct ){
+    	   this.setOptions({
+    	    minDate:jQuery('#shDateStart').val()?jQuery('#shDateStart').val():false
+    	   })
+    	  },
+    	  timepicker:false
+    	 });
+    	});
     
     </script>
    
