--- a/foot/src/main/resources/templates/xdm/futsal/FutsalXdmMfom.html
+++ b/foot/src/main/resources/templates/xdm/futsal/FutsalXdmMfom.html
@@ -60,7 +60,8 @@
                                         <div class="form-group">
                                             <div class="form-line">
                                             	
-                                                <textarea rows="4" class="form-control no-resize" id="futsalRegion" name="futsalRegion" th:text="${item?.futsalRegion}"  th:value="${item?.futsalRegion}" ></textarea>
+                                               <!--  <textarea rows="4" class="form-control no-resize" id="futsalRegion" name="futsalRegion" th:text="${item?.futsalRegion}"  th:value="${item?.futsalRegion}" ></textarea> -->
+                                                <textarea rows="4" class="form-control no-resize"  id="futsalRegion" name="futsalRegion" th:text="${@codeService.selectOneCachedCode(item?.futsalRegion)}" th:value="${item?.futsalRegion}" ></textarea>
                                             	<span id="futsalRegionError" style="color: red; font-size: 10px;"></span>
                                             </div>
                                         </div>
@@ -305,19 +306,20 @@
 			futsalBusinessHoursError.innerText = "";
 		} 
 		
-		 //풋살장 지역 8 서울 9 경기 입력
-		let result = /^[89]$/; // 8 또는 9만 허용
-		if(futsalRegion.value.trim() == ""){
-			futsalRegionError.innerText = "서울8 경기9 숫자를 입력해주세요";
-			futsalRegion.focus();
-			isValid = false;
-		}else if (!result.test(futsalRegion.value)) {
-			futsalRegionError.innerText = "8 또는 9만 입력 가능합니다.";
-			futsalRegion.focus();
-	        isValid = false;
-	    } else {
-	    	futsalRegionError.innerText = "";
-	    }
+		// 풋살장 지역 벨리데이션
+		let regionPattern = /^(서울|경기)$/; // "서울" 또는 "경기"만 허용
+
+		if (futsalRegion.value.trim() === "") {
+		    futsalRegionError.innerText = "서울 또는 경기를 입력해주세요.";
+		    futsalRegion.focus();
+		    isValid = false;
+		} else if (!regionPattern.test(futsalRegion.value.trim())) {
+		    futsalRegionError.innerText = "서울 또는 경기만 입력 가능합니다.";
+		    futsalRegion.focus();
+		    isValid = false;
+		} else {
+		    futsalRegionError.innerText = "";
+		}
 		
 		
 		//풋살장 주소 검사
