--- a/foot/src/main/resources/templates/xdm/signinadmin/SigninAdimn.html
+++ b/foot/src/main/resources/templates/xdm/signinadmin/SigninAdimn.html
@@ -42,7 +42,7 @@
                             <i class="material-icons">person</i>
                         </span>
                         <div class="form-line">
-                            <input type="text" class="form-control" id="userId" name="userId" placeholder="ID" value="kk1hhh1fff1" required autofocus>
+                            <input type="text" class="form-control" id="userId" name="userId" placeholder="ID" value="admin" required autofocus>
                              <span id="userIdError" style="color: red; font-size: 10px;"></span>
                         </div>
                     </div>
@@ -51,7 +51,7 @@
                             <i class="material-icons">lock</i>
                         </span>
                         <div class="form-line">
-                            <input type="password" class="form-control" id="userPassword" name="userPassword" placeholder="비밀번호"  value="1234"  required>
+                            <input type="password" class="form-control" id="userPassword" name="userPassword" placeholder="비밀번호"  value="admin12!"  required>
                             <span id="userPasswordError" style="color: red; font-size: 10px;"></span>
                         </div>
                     </div>
